# esp32_Learning

./: .gitignore  README.md
code_CAN_Comm/: CMakeLists.txt  sdkconfig  sdkconfig.old
code_CAN_Comm/components/BSP/: CMakeLists.txt
code_CAN_Comm/components/BSP/CAN/: can_comm.c  can_comm.h
code_CAN_Comm/components/BSP/TIMER/: simple_timer.h  wall_clock.h
code_CAN_Comm/components/BSP/UART/: uart_echo.h
code_CAN_Comm/main/: main.c
code_ESP_NOW_Comm/: CMakeLists.txt  sdkconfig  sdkconfig.old
code_ESP_NOW_Comm/components/BSP/: CMakeLists.txt
code_ESP_NOW_Comm/main/: main.c
code_EXIT/: CMakeLists.txt  sdkconfig  sdkconfig.old
code_EXIT/main/: main.c
code_I2C_XL9555/: CMakeLists.txt  sdkconfig.old
code_I2C_XL9555/main/: main.c
code_SysTimer/: CMakeLists.txt  sdkconfig
code_SysTimer/main/: main.c
code_Uart_Echo/: CMakeLists.txt
code_Uart_Echo/main/: main.c
code_arduino01/: CMakeLists.txt
code_i2c_eeprom/: CMakeLists.txt  sdkconfig.old
code_i2c_eeprom/main/: main.c
code_micro_ros/: CMakeLists.txt  sdkconfig  sdkconfig.old
code_micro_ros/components/BSP/: CMakeLists.txt
code_micro_ros/components/BSP/CAN/: can_comm.h
code_micro_ros/components/BSP/ESP_NOW_COMM/: broadcast_sender.h  sender.h
code_micro_ros/components/BSP/I2C/: xl9555.h
code_micro_ros/components/BSP/TIMER/: wall_clock.c
code_micro_ros/main/: CMakeLists.txt  main.c
simple_Code1/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
simple_Code1/main/: main.c
wifi_Code1/: CMakeLists.txt  sdkconfig  sdkconfig.old
wifi_Code1/main/: CMakeLists.txt  main.c
(+35 files in other folders)
